--- a/package.json
+++ b/package.json
@@ -10,12 +10,15 @@
     "test:watch": "jest --watch",
     "test:notify": "jest --notify",
     "test:watch:notify": "jest --watch --notify",
-    "test:coverage": "jest --coverage"
+    "test:coverage": "jest --coverage",
+    "migrate": "tsx src/infra/database/migrations/run.ts"
   },
   "dependencies": {
+    "async-retry": "^1.3.3",
     "autoprefixer": "10.4.14",
     "dotenv": "^16.3.1",
     "next": "13.4.12",
+    "pg": "^8.11.2",
     "postcss": "8.4.27",
     "react": "18.2.0",
     "react-dom": "18.2.0",
@@ -23,10 +26,13 @@
     "zod": "^3.21.4"
   },
   "devDependencies": {
+    "@swc/core": "^1.3.75",
     "@testing-library/jest-dom": "^5.17.0",
     "@testing-library/react": "^14.0.0",
+    "@types/async-retry": "^1.4.5",
     "@types/jest": "^29.5.3",
     "@types/node": "20.4.8",
+    "@types/pg": "^8.10.2",
     "@types/react": "18.2.18",
     "@types/react-dom": "18.2.7",
     "@types/testing-library__jest-dom": "^5.14.9",
@@ -38,6 +44,7 @@
     "jest-environment-jsdom": "^29.6.2",
     "node-notifier": "^10.0.1",
     "prettier": "^3.0.1",
+    "tsx": "^3.12.7",
     "typescript": "5.1.6"
   }
 }
