--- a/package.json
+++ b/package.json
@@ -16,6 +16,7 @@
   "dependencies": {
     "async-retry": "^1.3.3",
     "autoprefixer": "10.4.14",
+    "decimal.js": "^10.4.3",
     "dotenv": "^16.3.1",
     "next": "13.4.12",
     "pg": "^8.11.2",
