--- a/package.json
+++ b/package.json
@@ -16,6 +16,7 @@
   "dependencies": {
     "async-retry": "^1.3.3",
     "autoprefixer": "10.4.14",
+    "bcrypt": "^5.1.1",
     "decimal.js": "^10.4.3",
     "dotenv": "^16.3.1",
     "next": "13.4.12",
@@ -31,6 +32,7 @@
     "@testing-library/jest-dom": "^5.17.0",
     "@testing-library/react": "^14.0.0",
     "@types/async-retry": "^1.4.5",
+    "@types/bcrypt": "^5.0.0",
     "@types/jest": "^29.5.3",
     "@types/node": "20.4.8",
     "@types/pg": "^8.10.2",
