--- a/package.json
+++ b/package.json
@@ -19,6 +19,7 @@
     "bcrypt": "^5.1.1",
     "decimal.js": "^10.4.3",
     "dotenv": "^16.3.1",
+    "jsonwebtoken": "^9.0.1",
     "next": "13.4.12",
     "pg": "^8.11.2",
     "postcss": "8.4.27",
@@ -34,6 +35,7 @@
     "@types/async-retry": "^1.4.5",
     "@types/bcrypt": "^5.0.0",
     "@types/jest": "^29.5.3",
+    "@types/jsonwebtoken": "^9.0.2",
     "@types/node": "20.4.8",
     "@types/pg": "^8.10.2",
     "@types/react": "18.2.18",
