--- a/package.json
+++ b/package.json
@@ -7,9 +7,9 @@
     "start": "next start",
     "lint": "next lint",
     "test": "jest",
-    "test:watch": "jest --watch",
-    "test:notify": "jest --notify",
-    "test:watch:notify": "jest --watch --notify",
+    "test:unit": "jest src/",
+    "test:integration": "jest tests/integration/",
+    "test:e2e": "jest tests/e2e/",
     "test:coverage": "jest --coverage",
     "migrate": "tsx src/infra/database/migrations/run.ts"
   },
