--- a/package.json
+++ b/package.json
@@ -6,11 +6,11 @@
     "build": "next build",
     "start": "next start",
     "lint": "next lint",
-    "test": "jest",
+    "test": "jest --runInBand",
     "test:unit": "jest src/",
-    "test:integration": "jest tests/integration/",
-    "test:e2e": "jest tests/e2e/",
-    "test:coverage": "jest --coverage",
+    "test:integration": "jest --runInBand tests/integration/",
+    "test:e2e": "jest --runInBand tests/e2e/",
+    "test:coverage": "jest --runInBand --coverage",
     "migrate": "tsx src/infra/database/migrations/run.ts"
   },
   "dependencies": {
