--- a/package.json
+++ b/package.json
@@ -10,16 +10,10 @@
     "test:unit": "jest src/",
     "test:integration": "jest --runInBand tests/integration/",
     "test:e2e": "jest --runInBand tests/e2e/",
-    "test:coverage": "jest --runInBand --coverage",
-    "migrate": "tsx src/infra/database/migrations/run.ts"
+    "test:coverage": "jest --runInBand --coverage"
   },
   "dependencies": {
-    "async-retry": "^1.3.3",
     "autoprefixer": "10.4.14",
-    "bcrypt": "^5.1.1",
-    "decimal.js": "^10.4.3",
-    "dotenv": "^16.3.1",
-    "jose": "^4.14.6",
     "next": "13.4.12",
     "pg": "^8.11.3",
     "postcss": "8.4.27",
@@ -32,11 +26,7 @@
     "@swc/core": "^1.3.85",
     "@testing-library/jest-dom": "^5.17.0",
     "@testing-library/react": "^14.0.0",
-    "@types/async-retry": "^1.4.5",
-    "@types/bcrypt": "^5.0.0",
     "@types/jest": "^29.5.5",
-    "@types/node": "20.4.8",
-    "@types/pg": "^8.10.2",
     "@types/react": "18.2.18",
     "@types/react-dom": "18.2.7",
     "@types/testing-library__jest-dom": "^5.14.9",
@@ -48,7 +38,7 @@
     "jest-environment-jsdom": "^29.7.0",
     "node-notifier": "^10.0.1",
     "prettier": "^3.0.3",
-    "tsx": "^3.12.10",
+    "ts-jest": "^29.1.1",
     "typescript": "5.1.6"
   }
 }
