--- a/packages/server/package.json
+++ b/packages/server/package.json
@@ -11,7 +11,8 @@
     "test:unit": "jest src/",
     "test:integration": "jest --runInBand tests/",
     "test:e2e": "jest --runInBand tests/e2e/",
-    "test:coverage": "jest --runInBand --coverage"
+    "test:coverage": "jest --runInBand --coverage",
+    "lint": "eslint --fix src/**/*.ts"
   },
   "license": "MIT",
   "dependencies": {
@@ -31,6 +32,12 @@
     "@types/express": "^4.17.20",
     "@types/node": "20.4.8",
     "@types/pg": "^8.10.2",
+    "@typescript-eslint/eslint-plugin": "^6.9.0",
+    "@typescript-eslint/parser": "^6.9.0",
+    "eslint-config-standard": "^17.1.0",
+    "eslint-plugin-import": "^2.29.0",
+    "eslint-plugin-n": "^16.2.0",
+    "eslint-plugin-promise": "^6.1.1",
     "tsup": "^7.2.0",
     "tsx": "^3.12.10"
   }
